--- a/ios-clientes/ios-clientes-Info.plist
+++ b/ios-clientes/ios-clientes-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BiceVidaApiURL</key>
-	<string>http://desa-wlogic01.bicevida.cl:7312/RESTproject/api/cliente</string>
+	<string>http://desa-wlogic01.bicevida.cl:7312/RESTproject/api</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
