--- a/ios-clientes/ios-clientes-Info.plist
+++ b/ios-clientes/ios-clientes-Info.plist
@@ -4,6 +4,14 @@
 <dict>
 	<key>BiceVidaApiURL</key>
 	<string>http://desa-wlogic01.bicevida.cl:7312/RESTproject/api</string>
+	<key>BiceVidaOauth2TokenURL</key>
+	<string>https://10.170.6.71:4443/oauth2/token</string>
+	<key>BiceVidaOauth2Refresh</key>
+	<string></string>
+	<key>BiceVidaApiPublicKey</key>
+	<string>e7U1ivg3xwalSeYPVlpz5dmohRtZ0Ze0rD7UQRt9</string>
+	<key>BiceVidaApiPrivateKey</key>
+	<string>ziNT2i0sa7r8EiFiAL8ZDwQh6Exha9JlEo3F0HtG</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
