agregado todo los bearer token para acceder a la api falta que pida automáticamente refresh de un accessToken si se acaba el tiempo, durante que el uso de la app. Es decir, hacer refresh si hay un access denied usando la api

--- a/ios-clientes/ios-clientes-Info.plist
+++ b/ios-clientes/ios-clientes-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BiceVidaApiURL</key>
-	<string>http://desa-wlogic01.bicevida.cl:7312/RESTproject/api</string>
+	<string>https://10.170.6.71:3443/api/rest</string>
 	<key>BiceVidaOauth2TokenURL</key>
 	<string>https://10.170.6.71:4443/oauth2/token</string>
 	<key>BiceVidaOauth2Refresh</key>
